Remove uso depreciado